fixed police chase styles on mobile device

--- a/modules/installed/policeChase/policeChase.styles.css
+++ b/modules/installed/policeChase/policeChase.styles.css
@@ -10,3 +10,11 @@
 .move-icon .glyphicon {
 	top: 6px;
 }
+
+
+@media (max-width: 767px) {
+	.button-fixed-width {
+		display: inline-block;
+		width: 65px;
+	}
+}
